src/test/deca/context/invalid/arithmetic-wrongTypeModulo.context
arithmetic-wrongTypeModulo.deca:11: